Test Sandbox Project/src/objects/Training_Plan_Section_Assignment__c.object
<CustomObject>
    <fields>
        <fullName>Community_Id__c</fullName>
        <label>Community Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Completed_On__c</fullName>
        <inlineHelpText>Date this assignment was completed</inlineHelpText>
        <label>Completed On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Training_Plan_Assignment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Training Plan Assignment</label>
        <referenceTo>Training_Plan_Assignment__c</referenceTo>
        <relationshipLabel>Training Plan Section Assignments</relationshipLabel>
        <relationshipName>Training_Plan_Section_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Training_Plan_Section_Assignment_Score__c</fullName>
        <label>Training Plan Section Assignment Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Training_Plan_Section__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Training Plan Section</label>
        <referenceTo>Training_Plan_Section__c</referenceTo>
        <relationshipLabel>Training Plan Section Assignments</relationshipLabel>
        <relationshipName>Training_Plan_Section_Assignments</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Training_Plan_Section_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Training Plan Section Assignment</label>
    <nameField>
        <displayFormat>TPSA-{0000000}</displayFormat>
        <label>Training Plan Section Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Training Plan Section Assignments</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>